Added Jacinda Ardern in Jihab

--- a/HTMLMeSomething/index.html
+++ b/HTMLMeSomething/index.html
@@ -39,7 +39,8 @@
 	minister <a href="https://en.wikipedia.org/wiki/Jacinda_Ardern">Jacinda 
 	Ardern</a> responded "by showing love and compassion to moslems everywhere".
 	Its bittersweet that such a tragedy has led to my my proudest moments as 
-	a Kiwi. "They are us" <br>	
+	a Kiwi. "They are us" <br>
+	<img alt="NZ Prime Minister Jacinda Ardern" src="images/NZ_PM_Jacinda_Ardern.jpg" style="width: 400px; height: 582px"><br>	
 	<a href=" https://twitter.com/jacindaardern?lang=en">Follow Jacinda Ardern on Twitter</a></span></div>
 
 <div class="right">
@@ -88,12 +89,11 @@
 	<p>
 	<img alt="Horse Trek" height="501" src="images/new_zealand_-_briars_horse_trek.jpg" width="750"></p>
 	<p>Hiking through many of its nature trails.<img alt="Hiking" height="467" src="images/wysiwyg1533079325211-hiking-in-new-zealand-article.jpg" width="700"></p>
-	<p>
-	&nbsp;</p>
+	
 	<p>Enjoying some amazing views.</p>
 	<p>
 	<img alt="Mount Cook" height="204" src="images/New%20Zealand%20Mount%20Cook%20and%20Pukaki%20Lakesm.jpg" width="500"></p>
-	<p>&nbsp;</p>
+	
 </div>
 </article>
 </main>
