--- a/HTMLMeSomething/index.html
+++ b/HTMLMeSomething/index.html
@@ -10,7 +10,6 @@
 
 
 
-
 </head>
 
 <body>
@@ -18,28 +17,27 @@
 <article>
 <div class="left">
 	<img alt="New Zealand Flag" height="274" src="images/nzflagsm.jpg" width="480">
-	<h3>Lessons from Christchurch</h3><br>
+	<h3>Lessons from Christchurch Terrorist Attack 3/15/2019</h3><br>
 	<img alt="Policewoman wearing headscarf" height="698" src="images/policehijabsm.jpg" width="458"><br>
 	<span class="auto-style3">Like most New Zealanders I was stunned by the 
 	attack on the <a href="https://en.wikipedia.org/wiki/Christchurch">Christchurch
-	</a>mosques that killed 50 people including a 3 and 4 
+	</a>mosques that killed 50 people including a three and a four 
 	year old child. I weep at the senseless violence and loss of precious lives.
 	<br>
 	<b>As-Salaam-Alaikum.</b><br>
 	I contrast this to my carefree childhood and mourn the loss of my former 
 	countries innocence.<br>The policewoman in this picture is wearing a head 
 	scarf in solidarity with the moslem community and a rose to mourn those lost 
-	in the&nbsp; 
-	tragedy. Many New Zealand women have followed the prime ministers lead 
+	in the tragedy. Many New Zealand women have followed the prime ministers lead 
 	and are wearing headscarves to show their support for the New Zealands 
 	moslem community and New Zealanders have formed human chains of protection 
 	around mosques for Friday prayers.<br>
 	<img alt="Solidarity" height="334" src="images/scarvessm.jpg" width="500"><br>
 	<br>When asked by President Trump what the US could do to help, the prime 
 	minister <a href="https://en.wikipedia.org/wiki/Jacinda_Ardern">Jacinda 
-	Ardern</a> responded "by showing love and compassion to moslems everywhere".
-	Its bittersweet that such a tragedy has led to my my proudest moments as 
-	a Kiwi. "They are us" <br>
+	Ardern</a> responded with "by showing love and compassion to moslems everywhere".
+	Its bittersweet that such a tragedy has led to my proudest moments as 
+	a Kiwi. <br><h3>"New Zealand is their home"</h3><h2>"They are us" </h2><br>
 	<img alt="NZ Prime Minister Jacinda Ardern" src="images/NZ_PM_Jacinda_Ardern.jpg" style="width: 400px; height: 582px"><br>	
 	<a href=" https://twitter.com/jacindaardern?lang=en">Follow Jacinda Ardern on Twitter</a></span></div>
 
@@ -49,36 +47,36 @@
 	<h3>My US Life</h3><span class="auto-style3">I came to the 
 	US in early 2006 with my two year old son in tow.<br><br>&nbsp;<img alt="Neo" height="708" src="images/IMG_20121013_123333-01.jpeg" width="362"><br>
 	<br>We soon found acceptance and love within the St Louis community and I 
-	married an American late that year. Unfortunately my husband became 
+	married an American late that year. Unfortunately my husband Troy became 
 	chronically ill two years into our marriage and got progressively worse over 
 	the next 7 years and died on 5/23/17.<br>
-	<img alt="Troy Lee Arnold" src="images/troy.jpg"><br>Miss you Baby 	<img alt="heart" height="45" src="images/heart.png" width="50"><br><br>I was 
-	overwhelmed by the love and support of my colleagues and the Washington 
-	University community.<br>Since then my son and I have healed and are 
+	<img alt="Troy Lee Arnold" src="images/troy.jpg"><br>Miss you Baby 	<img alt="heart" height="45" src="images/heart.png" width="50"><br><br>After Troy passed I was 
+	overwhelmed by the love and support of my friends and colleagues and the wider Washington 
+	University community.<br>Since then my son and I have slowly healed and are 
 	embracing life in the US. I very much enjoy my work at the university and 
-	the camaraderie of my colleagues who as smart as they are amusing. My son loves 
-	the US and is in every way an American. I'm still a bit of a hybrid but am 
+	the camaraderie of my colleagues who are as smart as they are amusing. I enjoy teaching them proper English syntax. My son loves 
+	the US and is in every way an American. I'm still a bit of a hybrid but I'm 
 	learning to love my adopted country and to enjoy its many splenders. We have a good life here and 
 	are grateful for the many opportunities this country offers. We continue our 
 		journey toward becoming US citizens and look forward to contributing to this 
-		fine country. <h2>Thank you USA.</h2>
+		fine country. <br><h2>Thank you USA.</h2>
 	<br></span></div>
 </div>
 
-<div class="center">
+<div id ="me"class="center">
 
 <h1>Who Am I?</h1>
 	<h1>
 	<img alt="Karen" src="images/KPsm.jpg" style="width: 300px; height: 318px"></h1></div>
 	
 
-<div class="center">
+<div id ="kiwi" class="center">
 
 <h1>My Kiwi Life</h1>
 	<p>I was born in <a href="https://en.wikipedia.org/wiki/New_Zealand">New Zealand</a> and grew up in a beautiful country known for 
 	its friendliness and hospitality. Each year the first of the spring lambs 
 	are displayed proudly on the front page of the
-	<a href="https://www.stuff.co.nz/waikato-times">Waikato Times.</a></p>
+	<a href="https://www.stuff.co.nz/waikato-times">Waikato Times.</a> Such was New Zealands innocence.</p>
 	<p>Long summers were spent at the beach running wild, swimming, fishing and 
 	generally experiencing a freedom my son will never know.</p>
 	<p>
@@ -97,8 +95,8 @@
 </div>
 </article>
 </main>
-<div>
-	<h3 class="auto-style4">
+<div class="style1">
+	<h3>
 	<a href="https://www.youtube.com/watch?v=61WwIzhW9Lg">For those wanting to visit New Zealand, 
 	watch this video to learn some of the words you'll need</a></h3></div>
 
